Seguridad con sanctum y inclusión del metodo patch en los diferentes controladores
