# app/Http/Requests/Habitacion/BulkStoreRequest.php
@@ -6,7 +6,7 @@ use Illuminate\Foundation\Http\FormRequest;
 use Illuminate\Http\Response;
 use Illuminate\Validation\ValidationException;
 
-class PutRequest extends FormRequest
+class BulkStoreRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -23,23 +23,13 @@ class PutRequest extends FormRequest
      */
     public function rules(): array
     {
-        $method = $this->method();
-
-        if ($method == "PUT") {
-            return [
-                'numero' => 'required|max:10',
-                'tipo' => 'required|min:5|max:20',
-                'precioNoche' => 'required|numeric',
-                'hotel_id' => 'required|integer',
-            ];
-        } else {
-            return [
-                'numero' => 'sometimes|max:10',
-                'tipo' => 'sometimes|min:5|max:20',
-                'precioNoche' => 'sometimes|numeric',
-                'hotel_id' => 'sometimes|integer',
-            ];
-        }
+        return [
+            'habitaciones' => 'required|array',
+            'habitaciones.*.numero' => 'required|string',
+            'habitaciones.*.tipo' => 'required|string',
+            'habitaciones.*.precioNoche' => 'required|numeric',
+            'habitaciones.*.hotel_id' => 'required|exists:hoteles,id',
+        ];
     }
 
     public function failedValidation(\Illuminate\Contracts\Validation\Validator $validator)
