# routes/api.php
@@ -4,6 +4,7 @@ use App\Http\Controllers\Api\HabitacionController;
 use App\Http\Controllers\Api\HotelController;
 use App\Http\Controllers\Api\HuespedController;
 use App\Http\Controllers\Api\ServicioController;
+use App\Http\Controllers\Api\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -16,12 +17,16 @@ use Illuminate\Support\Facades\Route;
 | asignadas al grupo de middleware "api".
 */
 
+
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+Route::post('user/login', [UserController::class, 'login']);
+
+
 // Rutas para Servicios
-Route::group(['prefix' => 'servicio'], function () {
+Route::group(['prefix' => 'servicio', 'middleware' => 'auth:sanctum'], function () {
     Route::get('/all', [ServicioController::class, 'all']);
     Route::get('/{servicio}/hoteles', [ServicioController::class, 'hoteles']);
 });
@@ -30,6 +35,7 @@ Route::resource('/servicio', ServicioController::class)->except(['create', 'edit
 // Rutas para Hoteles
 Route::group(['prefix' => 'hotel'], function () {
     Route::get('/all', [HotelController::class, 'all']);
+    Route::post('/cascada', [HotelController::class, 'cascada']);
     Route::get('/{hotel}/habitaciones', [HotelController::class, 'habitaciones']);
     Route::get('/{hotel}/servicios', [HotelController::class, 'servicios']);
     Route::post('/{hotel}/servicio/{servicio}', [HotelController::class, 'addServicio']);
@@ -41,6 +47,7 @@ Route::resource('/hotel', HotelController::class)->except(['create', 'edit']);
 
 
 Route::group(['prefix' => 'habitacion'], function () {
+    Route::post('/bulk', [HabitacionController::class, 'bulkStore']);
     Route::get('/all', [HabitacionController::class, 'all']);
     Route::get('/{habitacion}/hotel', [HabitacionController::class, 'hotel']);
     Route::get('/{habitacion}/huespedes', [HabitacionController::class, 'huespedes']);
@@ -57,6 +64,8 @@ Route::group(['prefix' => 'huesped'], function () {
     Route::post('/{huesped}/checkout', [HuespedController::class, 'checkoutHabitacion']);
 });
 Route::resource('/huesped', HuespedController::class)->except(['create', 'edit']);
+
+// Rutas para Usuarios
 
 
 
