# routes/web.php
@@ -1,5 +1,8 @@
 <?php
 
+use App\Models\User;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Hash;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -15,4 +18,36 @@ use Illuminate\Support\Facades\Route;
 
 Route::get('/', function () {
     return view('welcome');
+});
+
+Route::get('/login', function () {
+    return 'Página de login no implementada';
+})->name('login');
+
+
+Route::get('/setup', function () {
+    $credentials = [
+        'email' => "admin@admin.com",
+        'password' => "12345678"
+    ];
+
+    if (!Auth::attempt($credentials)) {
+        $user = new User();
+        $user->name = 'Admin';
+        $user->email = $credentials['email'];
+        $user->password = Hash::make($credentials['password']);
+        $user->save();
+    }
+    if (Auth::attempt($credentials)) {
+        $user = Auth::user();
+        $adminToken = $user->createToken('admin-token', ['create', 'update', 'delete']);
+        $updateToken = $user->createToken('update-token', ['create', 'update']);
+        $basicToken = $user->createToken('basic-token', ['create', 'update']);
+
+        return [
+            'admin' => $adminToken->plainTextToken,
+            'update' => $updateToken->plainTextToken,
+            'basic' => $basicToken->plainTextToken,
+        ];
+    }
 });
